2009-05-15
  Thorvald Natvig <slicer@users.sourceforge.net>
    9f7ef74  Updated Ban Editor

2009-05-13
  Thorvald Natvig <slicer@users.sourceforge.net>
    03ef639  Fix SQL for udp database

2009-05-12
  Thorvald Natvig <slicer@users.sourceforge.net>
    9df364f  Automatically switch to TCP mode.
    a826a9e  Only count voice packets as "switch to UDP" signal

  withgod <withgod@users.sourceforge.net>
    a30fc85  weblist.pl modified

2009-05-08
  Tuck Therebelos <snares@users.sourceforge.net>
    8415c87  L4d, TF2 build update

2009-05-07
  Thorvald Natvig <slicer@users.sourceforge.net>
    f56fca0  Submodule update
    23389b3  Remove password from ConnectDialog gui
    226402f  Flags in public server list
    dc41e53  CRLF
    8634a9c  Avoid vacuum in initialization

2009-05-06
  Thorvald Natvig <slicer@users.sourceforge.net>
    39ec136  Flags

2009-05-05
  Thorvald Natvig <slicer@users.sourceforge.net>
    e3cc00c  Store date, duration, username, reason and hash with bans
    53a9b08  Recreate SQL when upgrading

2009-05-04
  Mikkel Krautz <mikkel@krautz.dk>
    dc6e8d1  Fix blank email corner-case. Abort in-progress host lookups on
	     email change. Show proper error on invalid email.
    92e9ef6  Show '(none)' for email-less certificates in CertView.
    67ed2b0  Delayed email validation in CertWizard.

  Thorvald Natvig <slicer@users.sourceforge.net>
    4194703  Avoid encoding empty packet at end-of-speech
    534753f  Optimize audio framing, and preserve flags
    c6b204c  Add missing disable_copy()
    3cc160b  Trim whitespace from ConnectDialog input

2009-05-03
  Álvaro Manuel Recio Pérez <naproxeno@users.sourceforge.net>
    3c9ea0e  Updated Spanish translation

  Thorvald Natvig <slicer@users.sourceforge.net>
    4a7251b  s/SuperServerUser/SuperUser/
    a067f2e  Support enabling noise
    a65ebd0  Cleanup speexbuild.pro file
    df6c8ed  Move DX Input initialization to one thread
    803781d  Remove libspeex, as we only use libspeexdsp